other/secrets-not-from-env-vars-cve-2024-3177/.chainsaw-test/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  annotations:
    kubernetes.io/enforce-mountable-secrets: "true"
spec:
  containers:
  - name: my-container
    image: nginx
    envFrom:
    - secretRef:
        name: my-secret
  initContainers:
  - name: init-container
    image: busybox
    command: ["sh", "-c", "echo init"]
    envFrom:
    - secretRef:
        name: init-secret
  ephemeralContainers:
  - name: ephemeral-container
    image: busybox
    command: ["sh", "-c", "echo ephemeral"]
    envFrom:
    - secretRef:
        name: ephemeral-secret
